<resources>
    <string name="app_name">EnForest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_id">863855204367-hm6eoi341o031ig9ljnd2psncvr700g0.apps.googleusercontent.com</string>

    <string name="user_uid">U2FsdGVkX1/+odzQABxvTkkDhxjN8GIs3V6WeZq9wGECzwE7P5k2Z8Wm8/iW9Jgs+aIjl18bC0q4lRZ8iRyLESy4MevH0HUYATA0EXGTE2coyb/kMXyjkz1VeDGFhOxX</string>
    <string name="ex_text">" 다양한 사고로 따로 또 같이 자유롭게 가치있게 "</string>
    <string name="day">daily</string>
    <string name="week">weekly</string>
    <string name="month">monthly</string>
    <string name="low">low</string>
    <string name="middle">middle</string>
    <string name="high">high</string>
    <string name="mission">mission</string>
    <string name="study"><s></s>tudy</string>
    <string name="home">home</string>
    <string name="search_view_hint">그룹 검색</string>
    <string name="basic_test">초급테스트</string>
    <string name="basic_test_explain">15분 20초</string>
    <string name="middle_test">중급테스트</string>
    <string name="middle_test_explain">20분 25초</string>
    <string name="hard_test">상급테스트</string>
    <string name="hard_test_explain">30분 30초</string>
</resources>