<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.gsm.presentation.ui.mission.MissionFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="미션 추가하기"
            android:textColor="@color/main_dark_blue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:checkedChip="@+id/day_chip"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/day_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day" />

            <com.google.android.material.chip.Chip
                android:id="@+id/month_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week" />

            <com.google.android.material.chip.Chip
                android:id="@+id/year_chip"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />
        </com.google.android.material.chip.ChipGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="@+id/guideline3"
            tools:listitem="@layout/item_mission" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="89dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="269dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/error_layout"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toBottomOf="@+id/guideline2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#005BFF">


                <TextView
                    android:id="@+id/mission_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="@id/mission_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="블로그 작성" />

                <View
                    android:id="@+id/mission_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#FCEBEB"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toBottomOf="@id/mission_title_text" />

                <TextView
                    android:id="@+id/mission_content_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:includeFontPadding="false"
                    android:padding="20dp"
                    android:text="미션을 입력해주세요!"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/text_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mission_line"
                    tools:text="7일 중 5번의 게시글을 포스팅해라! " />


                <View
                    android:id="@+id/text_line"
                    android:layout_width="80sp"
                    android:layout_height="20sp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_line_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mission_content_text" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_light"

                    android:includeFontPadding="false"
                    android:textColor="#BDA5A5"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_line"
                    app:layout_constraintEnd_toEndOf="@+id/text_line"
                    app:layout_constraintStart_toStartOf="@+id/text_line"
                    app:layout_constraintTop_toTopOf="@+id/text_line"
                    tools:text="02/20~04/21" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:layout_marginLeft="20dp"
            android:includeFontPadding="false"
            android:text="미션 정보"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline3" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mission_daily_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#F2F7FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <ImageView
                android:id="@+id/month_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/mission_calendar_day_31"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:includeFontPadding="false"
                android:text="하루 남은 미션"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/month_img"
                app:layout_constraintLeft_toLeftOf="@id/month_img"
                app:layout_constraintStart_toEndOf="@+id/month_img"
                app:layout_constraintTop_toTopOf="@+id/month_img" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/mission_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mission_weekly_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:background="#F2F7FF"
            app:layout_constraintStart_toStartOf="@+id/mission_daily_layout"
            app:layout_constraintTop_toBottomOf="@+id/mission_daily_layout">

            <ImageView
                android:id="@+id/week_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/mission_calendar_day_31"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:includeFontPadding="false"
                android:text="일주일 남은 미션"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/week_img"
                app:layout_constraintLeft_toLeftOf="@id/week_img"
                app:layout_constraintStart_toEndOf="@+id/week_img"
                app:layout_constraintTop_toTopOf="@+id/week_img" />

            <ImageView
                android:id="@+id/week_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/mission_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mission_monthly_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#F2F7FF"
            app:layout_constraintStart_toStartOf="@+id/mission_weekly_layout"
            app:layout_constraintTop_toBottomOf="@+id/mission_weekly_layout">

            <ImageView
                android:id="@+id/days_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/mission_calendar_day_31"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:includeFontPadding="false"
                android:text="한달 남은 미션"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/days_img"
                app:layout_constraintLeft_toLeftOf="@id/days_img"
                app:layout_constraintStart_toEndOf="@+id/days_img"
                app:layout_constraintTop_toTopOf="@+id/days_img" />

            <ImageView
                android:id="@+id/days_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/mission_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="미션 입력"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission_monthly_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#EDF9F3"
            android:onClick="@{(view)->fragment.writeLayoutClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <ImageView
                android:id="@+id/write_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/mission_write"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="미션 입력하기"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/write_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/write_img"
                app:layout_constraintStart_toEndOf="@+id/write_img"
                app:layout_constraintTop_toTopOf="@+id/write_img" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>